--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-firebase-hooks": "^3.0.4",
     "react-icons": "^4.2.0",
     "react-scripts": "4.0.3",
+    "react-spinners-css": "^2.0.1",
     "styled-components": "^5.2.3",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
