--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@types/react-dom": "^17.0.0",
     "firebase": "^8.4.3",
     "react": "^17.0.2",
+    "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^17.0.2",
     "react-firebase-hooks": "^3.0.4",
     "react-icons": "^4.2.0",
     "react-scripts": "4.0.3",
+    "react-select": "^4.3.0",
     "react-spinners-css": "^2.0.1",
     "styled-components": "^5.2.3",
     "typescript": "^4.1.2",
@@ -49,6 +51,7 @@
     "styled-components": "^5"
   },
   "devDependencies": {
+    "@types/react-select": "^4.0.15",
     "@types/styled-components": "^5.1.9"
   }
 }
